# C-Lib-Patcher

./: CMakeLists.txt  Makefile  README.md  compile.py  injector.cpp  libpatch.cpp
.github/workflows/: cmake-arm.yml
old/: mempatch.c
